- MFH: Fixed bug #31754 (dbase_open() fails for mode = 1). (Mehdi, Derick)